2003-02-12  Mark Salter  <msalter@redhat.com>

	* src/if_i82559.c: Remove restriction preventing combination of
	*_GET_ESA and *_HAS_EEPROM.

2003-01-03  Gary Thomas  <gary@mlbassoc.com>

	* src/if_i82559.c: 
	* cdl/intel_i82559_eth_drivers.cdl: Allow finer control over
	debug (chatter) by making control booldata.

2002-12-17  Mark Salter  <msalter@redhat.com>

	* src/if_i82559.c (CYGHWR_DEVS_ETH_INTEL_I82559_ENDIAN_NEUTRAL_IO): New
	flag to support systems where PCI IO operations are not affected by
	CPU endianess.

2002-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/if_i82559.c (pci_init_find_82559s): Changed scope of 
	max_interrupt_handle since its needed in other places.
	* src/if_i82559.c (i82559_stop): Corrected wrong name of variable
	in a diag_printf function.

2002-07-24  Gary Thomas  <gary@mlbassoc.com>

	* src/if_i82559.c (pci_init_find_82559s): 
	Allow platform to define CYGHWR_DEVS_ETH_INTEL_I82559_USE_MEMORY
	which forces use of memory instead of I/O space for device access.

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_i82559.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-04-09  Hugo Tyson  <hmt@redhat.com>

	* src/if_i82559.c (i82559_stop): Free up any pending transmissions
	to prevent MBUF store leaks if the calling thread - the one that's
	shutting down the interface - priority ends up higher than (or
	same as) the network service threads.

2002-03-26  Jonathan Larmour  <jlarmour@redhat.com>

	* src/if_i82559.c (wait_for_cmd_done): Don't assert if RUC_ADDR_LOAD
	command doesn't clear - on some chips it never does.

2002-03-18  Hugo Tyson  <hmt@redhat.com>

	* src/if_i82559.c (pci_init_find_82559s): Move allocation of
	statistics pointer for each device to here, out of
	i82559_start().  It used to leak PCI window store every time the
	interface cycled down/up.  [Case 107110]

2002-02-25  Mark Salter  <msalter@redhat.com>
